--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ chmod +x ./install.sh
 <a name="other-things-with-the-server" class="anchor" href="#other-things-with-the-server"><span class="octicon octicon-link"></span></a>Other things with the server</h3>
 
 <h4>
-<a name="upload-the-servers-configuration-file" class="anchor" href="#upload-the-servers-configuration-file"><span class="octicon octicon-link"></span></a>Upload the server's configuration file</h4>
+<a name="update-the-servers-configuration-file" class="anchor" href="#update-the-servers-configuration-file"><span class="octicon octicon-link"></span></a>Update the server's configuration file</h4>
 
 <p>To update the configuration file, type</p>
 
