Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <h1>
 <a name="haythserv" class="anchor" href="#haythserv"><span class="octicon octicon-link"></span></a>HaythServ</h1>
 
-<h2>
-<a name="cube-2-sauerbraten-server-modification-based-on-suckerserv" class="anchor" href="#cube-2-sauerbraten-server-modification-based-on-suckerserv"><span class="octicon octicon-link"></span></a>Cube 2: Sauerbraten server modification based on SuckerServ</h2>
+<p>Cube 2: Sauerbraten server modification based on SuckerServ</p>
 
-<p>Features¹:</p>
+<h2>
+<a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features¹:</h2>
 
 <ul>
 <li>Based on SuckerServ-v5.</li>
@@ -62,7 +62,8 @@
 <li>Many root commands to administrate the server⁴.</li>
 <li>#mkt command to set the duration of a kick done by a master (in seconds).</li>
 <li>#getip command to easily get a player's IP-Address.</li>
-</ul><hr><p>To do list:</p>
+</ul><hr><h2>
+<a name="to-do-list" class="anchor" href="#to-do-list"><span class="octicon octicon-link"></span></a>To do list:</h2>
 
 <ul>
 <li>Improve name protection.</li>
@@ -71,7 +72,8 @@
 <li>Support to load, unload and reload modules on-the-fly.</li>
 <li>Fix auth-system.</li>
 <li>Improve cheater-detection.</li>
-</ul><hr><p>Known bugs:</p>
+</ul><hr><h2>
+<a name="known-bugs" class="anchor" href="#known-bugs"><span class="octicon octicon-link"></span></a>Known bugs:</h2>
 
 <ul>
 <li>Name protection allows login as other account...(lol).</li>
@@ -625,7 +627,8 @@ chmod +x ./install.sh
 
 <hr><p>The first "private" release of HaythServ was done at end of year 2012, it was some basically modifics of HopMod. Jed did this work, he did some basically login system, but then I saw SuckerServ, it looked like a much better server mod, but at the moment I know it is not. I started modding it, I added some commands, changed some privileges, added Jed's login, and runned a server. At Jun, 13th 2013 I published it's first release on <a href="http://github.com/Gnaoprr/HaythServ">http://github.com/Gnaoprr/HaythServ</a>.</p>
 
-<hr><p>Notes:</p>
+<hr><h1>
+<a name="notes" class="anchor" href="#notes"><span class="octicon octicon-link"></span></a>Notes:</h1>
 
 <ol>
 <li>Some of these features may be available only in the development branch (dev).</li>
