--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <p>Cube 2: Sauerbraten server modification based on SuckerServ</p>
 
 <h2>
-<a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features¹:</h2>
+<a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features:</h2>
 
 <ul>
 <li>Based on SuckerServ-v5.</li>
@@ -57,9 +57,9 @@
 </ul>
 </li>
 <li>Root privilege level.</li>
-<li>Improved man system².</li>
-<li>Unix-like command syntax³.</li>
-<li>Many root commands to administrate the server⁴.</li>
+<li>Improved man system¹.</li>
+<li>Unix-like command syntax².</li>
+<li>Many root commands to administrate the server.</li>
 <li>#mkt command to set the duration of a kick done by a master (in seconds).</li>
 <li>#getip command to easily get a player's IP-Address.</li>
 </ul><hr><h2>
@@ -77,7 +77,7 @@
 
 <ul>
 <li>Name protection allows login as other account...(lol).</li>
-<li>Cheater-detection may ban non-cheaters⁵.</li>
+<li>Cheater-detection may ban non-cheaters³.</li>
 <li>Auth-system not working.</li>
 </ul><hr><h1>
 <a name="wiki" class="anchor" href="#wiki"><span class="octicon octicon-link"></span></a>Wiki</h1>
@@ -106,9 +106,6 @@ chmod +x ./install.sh
 
 <hr><h2>
 <a name="configuring" class="anchor" href="#configuring"><span class="octicon octicon-link"></span></a>Configuring</h2>
-
-<h3>
-<a name="this-section-is-poorly-written-it-will-be-rewritten-soon" class="anchor" href="#this-section-is-poorly-written-it-will-be-rewritten-soon"><span class="octicon octicon-link"></span></a>This section is poorly written, it will be rewritten soon...</h3>
 
 <p>The configuration files are all stored in the ./conf/ directory - that's all you need to edit to configure the server. The server config is the server.conf file in the ./conf/ directory - it should look like this:</p>
 
@@ -593,34 +590,25 @@ chmod +x ./install.sh
 </pre></div>
 
 <hr><h2>
-<a name="starting-stopping-restarting-and-reloading-the-server" class="anchor" href="#starting-stopping-restarting-and-reloading-the-server"><span class="octicon octicon-link"></span></a>Starting, stopping, restarting and reloading the server.</h2>
+<a name="running-the-server" class="anchor" href="#running-the-server"><span class="octicon octicon-link"></span></a>Running the server.</h2>
 
-<p>This is pretty easy, </p>
+<p>To start, stop, restart, update the server's configuration files and MUCH more, we just need to use the ./bin/server script, here is it's syntax:</p>
 
-<div class="highlight highlight-bash"><pre>./bin/server <span class="s2">"start"</span>
+<div class="highlight highlight-bash"><pre><span class="nv">$ </span>./bin/server <span class="nb">help</span>
+usage: ./bin/server <span class="o">[</span>start<span class="o">]</span> <span class="o">[</span>--no-statuslog<span class="o">]</span>
+       ./bin/server <span class="o">[</span>start<span class="o">]</span> luapp luafile
+       ./bin/server <span class="o">[</span>start<span class="o">]</span> shell <span class="o">[</span>ruby|perl<span class="o">]</span>
+
+       ./bin/server stop
+
+       ./bin/server restart
+
+       ./bin/server status <span class="o">[</span>output file<span class="o">]</span>
+       ./bin/server updateconf
+       ./bin/server password <span class="s1">'new password'</span>
 </pre></div>
 
-<p>will start it,</p>
-
-<div class="highlight highlight-bash"><pre>./bin/server <span class="s2">"stop"</span>
-</pre></div>
-
-<p>will stop it,</p>
-
-<div class="highlight highlight-bash"><pre>./bin/server <span class="s2">"restart"</span>
-</pre></div>
-
-<p>will set it for a restart at the end of the game and</p>
-
-<div class="highlight highlight-bash"><pre>./bin/server <span class="s2">"updateconf"</span>
-</pre></div>
-
-<p>will reload the configuration files (./conf/*), there are also other options, try</p>
-
-<div class="highlight highlight-bash"><pre>./bin/server <span class="s2">"help"</span>
-</pre></div>
-
-<p>to see all possible options.</p>
+<p>Please note that ./bin/server restart will set the server for a restart at the end of the game.</p>
 
 <hr><h2>
 <a name="haythservs-story" class="anchor" href="#haythservs-story"><span class="octicon octicon-link"></span></a>HaythServ's story</h2>
@@ -628,14 +616,12 @@ chmod +x ./install.sh
 <hr><p>The first "private" release of HaythServ was done at end of year 2012, it was some basically modifics of HopMod. Jed did this work, he did some basically login system, but then I saw SuckerServ, it looked like a much better server mod, but at the moment I know it is not. I started modding it, I added some commands, changed some privileges, added Jed's login, and runned a server. At Jun, 13th 2013 I published it's first release on <a href="http://github.com/Gnaoprr/HaythServ">http://github.com/Gnaoprr/HaythServ</a>.</p>
 
 <hr><h1>
-<a name="notes" class="anchor" href="#notes"><span class="octicon octicon-link"></span></a>Notes:</h1>
+<a name="notes" class="anchor" href="#notes"><span class="octicon octicon-link"></span></a>Notes</h1>
 
 <ol>
-<li>Some of these features may be available only in the development branch (dev).</li>
 <li>The extended man system (#man) requires you to use a bigger console size (/consize 15), because most of those manpages have more than the usual 5 console lines.</li>
 <li>The Unix-like command syntax is not available for all commands.</li>
-<li>Some of this commands should not be used, that's why they are disabled.</li>
-<li>Cheater-detection is a beta, it may ban people for "player position exceeded".</li>
+<li>Cheater-detection is a beta, so don't grumble if it doesn't work correctly.</li>
 </ol>
       </section>
       <footer>
