Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <p>Cube 2: Sauerbraten server modification based on SuckerServ</p>
 
 <h2>
-<a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features:</h2>
+<a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h2>
 
 <ul>
 <li>Based on SuckerServ-v5.</li>
@@ -63,7 +63,7 @@
 <li>#mkt command to set the duration of a kick done by a master (in seconds).</li>
 <li>#getip command to easily get a player's IP-Address.</li>
 </ul><hr><h2>
-<a name="to-do-list" class="anchor" href="#to-do-list"><span class="octicon octicon-link"></span></a>To do list:</h2>
+<a name="to-do-list" class="anchor" href="#to-do-list"><span class="octicon octicon-link"></span></a>To do list</h2>
 
 <ul>
 <li>Improve name protection.</li>
@@ -73,7 +73,7 @@
 <li>Fix auth-system.</li>
 <li>Improve cheater-detection.</li>
 </ul><hr><h2>
-<a name="known-bugs" class="anchor" href="#known-bugs"><span class="octicon octicon-link"></span></a>Known bugs:</h2>
+<a name="known-bugs" class="anchor" href="#known-bugs"><span class="octicon octicon-link"></span></a>Known bugs</h2>
 
 <ul>
 <li>Name protection allows login as other account...(lol).</li>
@@ -87,7 +87,7 @@
 
 <hr><p>First we need to clone the latest version, do:</p>
 
-<div class="highlight highlight-bash"><pre>git clone https://github.com/Gnaoprr/HaythServ.git ./HaythServ/
+<div class="highlight highlight-bash"><pre>git clone https://github.com/HaythServ/HaythServ.git ./HaythServ/
 </pre></div>
 
 <p>and it will automatically clone it. Now we need to give execute permission to the install script, then it will do everything automatically (on some distros, it will have problems with libboost-all, cause of other versions)</p>
