Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -76,16 +76,25 @@
 <a name="known-bugs" class="anchor" href="#known-bugs"><span class="octicon octicon-link"></span></a>Known bugs</h2>
 
 <ul>
-<li>Name protection allows login as other account...(lol).</li>
+<li>Name protection allows login as other account, this will be fixed in the next commit.</li>
 <li>Cheater-detection may ban non-cheaters³.</li>
 <li>Auth-system not working.</li>
-</ul><hr><h1>
+</ul><hr><h2>
+<a name="try-haythserv" class="anchor" href="#try-haythserv"><span class="octicon octicon-link"></span></a>Try HaythServ</h2>
+
+<p>Want to try HaythServ out? Feel free to visit our open servers! Try the following commands on sauerbraten!</p>
+
+<pre><code>/connect 162.220.10.113 28785 // Location: United States, FL
+/connect 134.255.216.64 28785 // Location: Germany
+</code></pre>
+
+<hr><h1>
 <a name="wiki" class="anchor" href="#wiki"><span class="octicon octicon-link"></span></a>Wiki</h1>
 
-<hr><h2>
+<h2>
 <a name="installing" class="anchor" href="#installing"><span class="octicon octicon-link"></span></a>Installing</h2>
 
-<hr><p>First we need to clone the latest version, do:</p>
+<p>First we need to clone the latest version, do:</p>
 
 <div class="highlight highlight-bash"><pre>git clone https://github.com/HaythServ/HaythServ.git ./HaythServ/
 </pre></div>
