Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 <li>Login and register system.
 
 <ul>
-<li>#master, #admin, #root commands to claim privileges after verifying with your account.</li>
+<li>#master, #admin and #root commands to claim privileges after verifying with your account.</li>
+<li>#invmaster, #invadmin and #invroot commands to claim invisible privileges after verifying via #login Username Password.</li>
 </ul>
 </li>
 <li>Root privilege level.</li>
@@ -76,7 +77,6 @@
 <a name="known-bugs" class="anchor" href="#known-bugs"><span class="octicon octicon-link"></span></a>Known bugs</h2>
 
 <ul>
-<li>Name protection allows login as other account, this will be fixed in the next commit.</li>
 <li>Cheater-detection may ban non-cheaters³.</li>
 <li>Auth-system not working.</li>
 </ul><hr><h2>
