Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <ul>
 <li>#master, #admin and #root commands to claim privileges after verifying with your account.</li>
-<li>#invmaster, #invadmin and #invroot commands to claim invisible privileges after verifying via #login Username Password.</li>
+<li>#invmaster, #invadmin and #invroot commands to claim invisible privileges after verifying via your player account.</li>
 </ul>
 </li>
 <li>Root privilege level.</li>
@@ -63,8 +63,9 @@
 <li>Many root commands to administrate the server.</li>
 <li>#mkt command to set the duration of a kick done by a master (in seconds).</li>
 <li>#getip command to easily get a player's IP-Address.</li>
+<li>#fairgame, #cw commands to start games with persisted teams and autopause on leave.</li>
 </ul><hr><h2>
-<a name="to-do-list" class="anchor" href="#to-do-list"><span class="octicon octicon-link"></span></a>To do list</h2>
+<a name="task-list" class="anchor" href="#task-list"><span class="octicon octicon-link"></span></a>Task list</h2>
 
 <ul>
 <li>Improve name protection.</li>
@@ -87,6 +88,32 @@
 <pre><code>/connect 162.220.10.113 28785 // Location: United States, FL
 /connect 134.255.216.64 28785 // Location: Germany
 </code></pre>
+
+<h1>
+<a name="haythserv-v20" class="anchor" href="#haythserv-v20"><span class="octicon octicon-link"></span></a>HaythServ-v2.0</h1>
+
+<p>Fast - Powerful - Lightweight</p>
+
+<h2>
+<a name="features-1" class="anchor" href="#features-1"><span class="octicon octicon-link"></span></a>Features</h2>
+
+<ul>
+<li>Based on zeromod.</li>
+<li>Up-to-date with latest zeromod.</li>
+</ul><hr><h2>
+<a name="task-list-1" class="anchor" href="#task-list-1"><span class="octicon octicon-link"></span></a>Task-List</h2>
+
+<ul>
+<li>Add login system (#register =&gt; creates account, #login =&gt; verifies, #reserve =&gt; reserves current name to the account which we are verified with, #master / #invmaster, #admin / #invadmin, #root / #invroot =&gt; claimes (invisible) privileges using our account)</li>
+<li>Add a #mapsucks command =&gt; if 1/2 of all players votes gametime gets reduced to 1 minute.</li>
+<li>Add a #traffic command =&gt; displays total used traffic and traffic usage per second for X seconds.</li>
+<li>Add a #names or #whois command =&gt; displays all names used by a IP-Address / IP-Range.</li>
+<li>Add a #cw command =&gt; persists teams and pauses when someone leaves, on rejoin automatic unspect, resume after 5 seconds delay.</li>
+</ul><hr><h2>
+<a name="please-note" class="anchor" href="#please-note"><span class="octicon octicon-link"></span></a>Please note</h2>
+
+<p>Please note that HaythServ-v2.0 is under development, it doesn't different from Zeromod! Download normal HaythServ or Zeromod! 
+The first version will be releases as far as all tasks in the task list are done.</p>
 
 <hr><h1>
 <a name="wiki" class="anchor" href="#wiki"><span class="octicon octicon-link"></span></a>Wiki</h1>
