Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -95,13 +95,20 @@
 <p>Fast - Powerful - Lightweight</p>
 
 <h2>
-<a name="features-1" class="anchor" href="#features-1"><span class="octicon octicon-link"></span></a>Features</h2>
+<a name="coming-features" class="anchor" href="#coming-features"><span class="octicon octicon-link"></span></a>Coming features</h2>
 
 <ul>
 <li>Based on zeromod.</li>
 <li>Up-to-date with latest zeromod.</li>
+<li>Up-to-date with latest enet.</li>
+<li>Player ranking.</li>
+<li>Login system with better name protection than normal HaythServ.</li>
+<li>Pure C++ =&gt; More powerful, more lightweight</li>
+<li>No use of not needed libs (e.g. boost) =&gt; Even more lightweight.</li>
+<li>Stable, the first release will be pushed after some days testing.</li>
+<li>Wiki.</li>
 </ul><hr><h2>
-<a name="task-list-1" class="anchor" href="#task-list-1"><span class="octicon octicon-link"></span></a>Task-List</h2>
+<a name="still-to-do" class="anchor" href="#still-to-do"><span class="octicon octicon-link"></span></a>Still to do</h2>
 
 <ul>
 <li>Add login system (#register =&gt; creates account, #login =&gt; verifies, #reserve =&gt; reserves current name to the account which we are verified with, #master / #invmaster, #admin / #invadmin, #root / #invroot =&gt; claimes (invisible) privileges using our account)</li>
