Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <p>Want to try HaythServ out? Feel free to visit our open servers! Try the following commands on sauerbraten!</p>
 
 <pre><code>/connect 162.220.10.113 28785 // Location: United States, FL
-/connect 134.255.216.64 28785 // Location: Germany
+/connect 134.255.216.64 28785 // Location: Germany, down.
 </code></pre>
 
 <h1>
@@ -98,19 +98,22 @@
 <a name="coming-features" class="anchor" href="#coming-features"><span class="octicon octicon-link"></span></a>Coming features</h2>
 
 <ul>
-<li>Based on zeromod.</li>
-<li>Up-to-date with latest zeromod.</li>
-<li>Up-to-date with latest enet.</li>
+<li>C++ Player commands.</li>
+<li>Flagruns.</li>
 <li>Player ranking.</li>
 <li>Login system with better name protection than normal HaythServ.</li>
 <li>Pure C++ =&gt; More powerful, more lightweight</li>
 <li>No use of not needed libs (e.g. boost) =&gt; Even more lightweight.</li>
 <li>Stable, the first release will be pushed after some days testing.</li>
+<li>Support to load and unload modules on-the-flight.</li>
 <li>Wiki.</li>
 </ul><hr><h2>
 <a name="still-to-do" class="anchor" href="#still-to-do"><span class="octicon octicon-link"></span></a>Still to do</h2>
 
 <ul>
+<li>C++ External Modules.</li>
+<li>#load, #unload, #reload.</li>
+<li>Flagruns.</li>
 <li>Add login system (#register =&gt; creates account, #login =&gt; verifies, #reserve =&gt; reserves current name to the account which we are verified with, #master / #invmaster, #admin / #invadmin, #root / #invroot =&gt; claimes (invisible) privileges using our account)</li>
 <li>Add a #mapsucks command =&gt; if 1/2 of all players votes gametime gets reduced to 1 minute.</li>
 <li>Add a #traffic command =&gt; displays total used traffic and traffic usage per second for X seconds.</li>
@@ -119,8 +122,7 @@
 </ul><hr><h2>
 <a name="please-note" class="anchor" href="#please-note"><span class="octicon octicon-link"></span></a>Please note</h2>
 
-<p>Please note that HaythServ-v2.0 is under development, it doesn't different from Zeromod! Download normal HaythServ or Zeromod! 
-The first version will be releases as far as all tasks in the task list are done.</p>
+<p>Please note HaythServ-v2.0 hasn't been released yet. Use the normal HaythServ.</p>
 
 <hr><h1>
 <a name="wiki" class="anchor" href="#wiki"><span class="octicon octicon-link"></span></a>Wiki</h1>
