Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -81,13 +81,9 @@
 <li>Cheater-detection may ban non-cheaters³.</li>
 <li>Auth-system not working.</li>
 </ul><hr><h2>
-<a name="try-haythserv" class="anchor" href="#try-haythserv"><span class="octicon octicon-link"></span></a>Try HaythServ</h2>
+<a name="note" class="anchor" href="#note"><span class="octicon octicon-link"></span></a>Note</h2>
 
-<p>Want to try HaythServ out? Feel free to visit our open servers! Try the following commands on sauerbraten!</p>
-
-<pre><code>/connect 162.220.10.113 28785 // Location: United States, FL
-/connect 134.255.216.64 28785 // Location: Germany, down.
-</code></pre>
+<p>HaythServ is no longer maintained, I'm currently working on HaythServ-v2.0.</p>
 
 <h1>
 <a name="haythserv-v20" class="anchor" href="#haythserv-v20"><span class="octicon octicon-link"></span></a>HaythServ-v2.0</h1>
@@ -122,7 +118,13 @@
 </ul><hr><h2>
 <a name="please-note" class="anchor" href="#please-note"><span class="octicon octicon-link"></span></a>Please note</h2>
 
-<p>Please note HaythServ-v2.0 hasn't been released yet. Use the normal HaythServ.</p>
+<p>Please note HaythServ-v2.0 hasn't been released yet. Use the normal HaythServ.
+Feel free to test this servermod! I'm running a test server of it. </p>
+
+<pre><code>/connect 162.220.10.113 // Location: United States, FL
+</code></pre>
+
+<p>I'll do a wiki as far as I've released this mod.</p>
 
 <hr><h1>
 <a name="wiki" class="anchor" href="#wiki"><span class="octicon octicon-link"></span></a>Wiki</h1>
