Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <li>Flagruns.</li>
 <li>Player ranking.</li>
 <li>Login system with better name protection than normal HaythServ.</li>
-<li>Pure C++ =&gt; More powerful, more lightweight</li>
+<li>Pure C++ =&gt; More powerful, more lightweight.</li>
 <li>No use of not needed libs (e.g. boost) =&gt; Even more lightweight.</li>
 <li>Stable, the first release will be pushed after some days testing.</li>
 <li>Support to load and unload modules on-the-flight.</li>
@@ -110,9 +110,7 @@
 <li>C++ External Modules.</li>
 <li>#load, #unload, #reload.</li>
 <li>Flagruns.</li>
-<li>Add login system (#register =&gt; creates account, #login =&gt; verifies, #reserve =&gt; reserves current name to the account which we are verified with, #master / #invmaster, #admin / #invadmin, #root / #invroot =&gt; claimes (invisible) privileges using our account)</li>
 <li>Add a #mapsucks command =&gt; if 1/2 of all players votes gametime gets reduced to 1 minute.</li>
-<li>Add a #traffic command =&gt; displays total used traffic and traffic usage per second for X seconds.</li>
 <li>Add a #names or #whois command =&gt; displays all names used by a IP-Address / IP-Range.</li>
 <li>Add a #cw command =&gt; persists teams and pauses when someone leaves, on rejoin automatic unspect, resume after 5 seconds delay.</li>
 </ul><hr><h2>
